...
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mises_share_cancel_bg"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#ff666666"
            android:textSize="17sp" />

        <View
            android:layout_width="15dp"
...
            android:id="@+id/btn_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mises_share_confirm_bg"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
