...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="@dimen/location_bar_icon_width"
        android:layout_gravity="center_vertical"
        android:nextFocusForward="@+id/tab_switcher_button"
        layout="@layout/url_bar" />

    <include layout="@layout/url_action_container" />

</merge>

