<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.chromium.chrome.browser.widget.FullscreenControlContainer xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="invisible" >
</org.chromium.chrome.browser.widget.FullscreenControlContainer>
